--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation 'android.arch.persistence.room:rxjava2:1.0.0'
     implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
 
+    implementation  'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+
 }
